--- a/html-css/index.html
+++ b/html-css/index.html
@@ -1,282 +1,342 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML-CSS Exercises</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
 
-        :root {
-            --primary-color: #4a90e2;
-            --secondary-color: #f39c12;
-            --text-color: #333;
-            --background-color: #f0f0f0;
-            --card-background: rgba(255, 255, 255, 0.95);
+      :root {
+        --primary-color: #4a90e2;
+        --secondary-color: #f39c12;
+        --text-color: #333;
+        --background-color: #f0f0f0;
+        --card-background: rgba(255, 255, 255, 0.95);
+      }
+
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: "Poppins", sans-serif;
+        background-color: black;
+        color: var(--text-color);
+        line-height: 1.6;
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .container {
+        width: 95%;
+        max-width: 1200px;
+        margin: 2rem auto;
+        padding: 2rem;
+        border-radius: 20px;
+        box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
+        position: relative;
+      }
+
+      .container::before {
+        content: "";
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        background: radial-gradient(
+          circle,
+          rgba(74, 144, 226, 0.1),
+          transparent
+        );
+        opacity: 0.5;
+        z-index: -1;
+        animation: pulse 15s ease-in-out infinite;
+      }
+
+      @keyframes pulse {
+        0% {
+          transform: scale(1);
         }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+        50% {
+          transform: scale(1.1);
         }
+        100% {
+          transform: scale(1);
+        }
+      }
 
+      h1,
+      h2 {
+        text-align: center;
+        color: white;
+        margin-bottom: 1.5rem;
+      }
+
+      h1 {
+        font-size: 3rem;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        margin-bottom: 2rem;
+        position: relative;
+        display: inline-block;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      h1::after {
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background-color: white;
+        border-radius: 10px;
+      }
+
+      h2 {
+        font-size: 2rem;
+        position: relative;
+        display: inline-block;
+        margin-top: 2.5rem;
+        padding-bottom: 0.5rem;
+      }
+
+      h2::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        width: 50px;
+        height: 3px;
+        background-color: var(--secondary-color);
+        transform: translateX(-50%) scaleX(0);
+        transition: transform 0.3s ease-in-out;
+      }
+
+      h2:hover::after {
+        transform: translateX(-50%) scaleX(1);
+      }
+
+      p {
+        text-align: center;
+        margin-bottom: 2.5rem;
+        font-size: 1.2rem;
+        color: #666;
+      }
+
+      .exercise-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 2rem;
+        margin-top: 2rem;
+      }
+
+      .exercise-card h2 {
+        color: black;
+      }
+
+      .exercise-card {
+        background: white;
+        border-radius: 15px;
+        padding: 1.5rem;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
+
+      .exercise-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+      }
+
+      ul {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 0.8rem;
+      }
+
+      .heading {
+        font-family: "Courier New", Courier, monospace;
+      }
+
+      a {
+        color: var(--text-color);
+        text-decoration: none;
+        font-weight: 500;
+        padding: 0.6rem 1rem;
+        background: #f0f0f0;
+        border-radius: 20px;
+        display: block;
+        transition: all 0.3s ease-in-out;
+        text-align: center;
+      }
+
+      a:hover {
+        background: black;
+        color: white;
+        transform: translateX(5px);
+      }
+
+      @media (max-width: 768px) {
         body {
-            font-family: 'Poppins', sans-serif;
-            background-color: black;
-            color: var(--text-color);
-            line-height: 1.6;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .container {
-            width: 95%;
-            max-width: 1200px;
-            margin: 2rem auto;
-            padding: 2rem;
-            border-radius: 20px;
-            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            position: relative;
-        }
-
-        .container::before {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, rgba(74, 144, 226, 0.1), transparent);
-            opacity: 0.5;
-            z-index: -1;
-            animation: pulse 15s ease-in-out infinite;
-        }
-
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
-        }
-
-        h1, h2 {
-            text-align: center;
-            color: white;
-            margin-bottom: 1.5rem;
+          font-size: 14px;
         }
 
         h1 {
-            font-size: 3rem;
-            text-transform: uppercase;
-            letter-spacing: 3px;
-            margin-bottom: 2rem;
-            position: relative;
-            display: inline-block;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        h1::after {
-            content: '';
-            position: absolute;
-            bottom: -10px;
-            left: 0;
-            width: 100%;
-            height: 4px;
-            background-color: white;
-            border-radius: 10px;
+          font-size: 2.5rem;
         }
 
         h2 {
-            font-size: 2rem;
-            position: relative;
-            display: inline-block;
-            margin-top: 2.5rem;
-            padding-bottom: 0.5rem;
-        }
-
-        h2::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            width: 50px;
-            height: 3px;
-            background-color: var(--secondary-color);
-            transform: translateX(-50%) scaleX(0);
-            transition: transform 0.3s ease-in-out;
-        }
-
-        h2:hover::after {
-            transform: translateX(-50%) scaleX(1);
-        }
-
-        p {
-            text-align: center;
-            margin-bottom: 2.5rem;
-            font-size: 1.2rem;
-            color: #666;
+          font-size: 1.8rem;
         }
 
         .exercise-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            margin-top: 2rem;
+          grid-template-columns: 1fr;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .container {
+          padding: 1.5rem;
         }
 
-        .exercise-card h2{
-            color: black;
+        h1 {
+          font-size: 2rem;
         }
 
-        .exercise-card {
-            background: white;
-            border-radius: 15px;
-            padding: 1.5rem;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        h2 {
+          font-size: 1.5rem;
         }
 
-        .exercise-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+        p {
+          font-size: 1rem;
         }
-
-        ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            gap: 0.8rem;
-        }
-
-        .heading {
-            font-family: 'Courier New', Courier, monospace;
-        }
-
-        a {
-            color: var(--text-color);
-            text-decoration: none;
-            font-weight: 500;
-            padding: 0.6rem 1rem;
-            background: #f0f0f0;
-            border-radius: 20px;
-            display: block;
-            transition: all 0.3s ease-in-out;
-            text-align: center;
-        }
-
-        a:hover {
-            background: black;
-            color: white;
-            transform: translateX(5px);
-        }
-
-        @media (max-width: 768px) {
-            body {
-                font-size: 14px;
-            }
-
-            h1 {
-                font-size: 2.5rem;
-            }
-
-            h2 {
-                font-size: 1.8rem;
-            }
-
-            .exercise-container {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .container {
-                padding: 1.5rem;
-            }
-
-            h1 {
-                font-size: 2rem;
-            }
-
-            h2 {
-                font-size: 1.5rem;
-            }
-
-            p {
-                font-size: 1rem;
-            }
-        }
+      }
+      .back {
+        background: none;
+        display: inline;
+      }
     </style>
-</head>
-<body>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="container">
-        <h1 class="heading">HTML-CSS Exercises</h1>
-        <p>Explore the solutions and notes for each exercise by clicking the links below:</p>
+      <a href="https://bootcamp-yashwant.netlify.app/" class="back"
+        ><i
+          class="fa-solid fa-share fa-2xl fa-flip-horizontal"
+          style="color: #ffff"
+        ></i
+      ></a>
+      <h1 class="heading">HTML-CSS Exercises</h1>
+      <p>
+        Explore the solutions and notes for each exercise by clicking the links
+        below:
+      </p>
 
-        <div class="exercise-container">
-            <div class="exercise-card">
-                <h2>Exercise 1</h2>
-                <ul>
-                    <li><a href="ex-1/solution-1.html" target="_blank">Solution 1</a></li>
-                    <li><a href="ex-1/solution-2.html" target="_blank">Solution 2</a></li>
-                    <li><a href="ex-1/solution-3.html" target="_blank">Solution 3</a></li>
-                    <li><a href="ex-1/notes.html" target="_blank">Notes</a></li>
-                </ul>
-            </div>
-
-            <div class="exercise-card">
-                <h2>Exercise 2</h2>
-                <ul>
-                    <li><a href="ex-2/solution-1.html" target="_blank">Solution 1</a></li>
-                    <li><a href="ex-2/solution-2.html" target="_blank">Solution 2</a></li>
-                    <li><a href="ex-2/solution-3.html" target="_blank">Solution 3</a></li>
-                    <li><a href="ex-2/notes.html" target="_blank">Notes</a></li>
-                </ul>
-            </div>
-
-            <div class="exercise-card">
-                <h2>Exercise 3</h2>
-                <ul>
-                    <li><a href="ex-3/solution-1.html" target="_blank">Solution 1</a></li>
-                    <li><a href="ex-3/solution-2.html" target="_blank">Solution 2</a></li>
-                    <li><a href="ex-3/solution-3.html" target="_blank">Solution 3</a></li>
-                    <li><a href="ex-3/solution-4.html" target="_blank">Solution 4</a></li>
-                    <li><a href="ex-3/notes.html" target="_blank">Notes</a></li>
-                </ul>
-            </div>
-
-            <div class="exercise-card">
-                <h2>Exercise 4</h2>
-                <ul>
-                    <li><a href="ex-4/solution-1.html" target="_blank">Solution 1</a></li>
-                    <li><a href="ex-4/solution-2.html" target="_blank">Solution 2</a></li>
-                    <li><a href="ex-4/solution-3.html" target="_blank">Solution 3</a></li>
-                    <li><a href="ex-4/notes.html" target="_blank">Notes</a></li>
-                </ul>
-            </div>
-
-            <div class="exercise-card">
-                <h2>Exercise 5</h2>
-                <ul>
-                    <li><a href="ex-5/solution-1.html" target="_blank">Solution 1</a></li>
-                    <li><a href="ex-5/solution-2.html" target="_blank">Solution 2</a></li>
-                    <li><a href="ex-5/solution-3.html" target="_blank">Solution 3</a></li>
-                    <li><a href="ex-5/notes.html" target="_blank">Notes</a></li>
-                </ul>
-            </div>
-
-            <div class="exercise-card">
-                <h2>Exercise 6</h2>
-                <ul>
-                    <li><a href="ex-6/solution.html" target="_blank">Solution</a></li>
-                    <li><a href="ex-6/notes.html" target="_blank">Notes</a></li>
-                </ul>
-            </div>
+      <div class="exercise-container">
+        <div class="exercise-card">
+          <h2>Exercise 1</h2>
+          <ul>
+            <li>
+              <a href="ex-1/solution-1.html" target="_blank">Solution 1</a>
+            </li>
+            <li>
+              <a href="ex-1/solution-2.html" target="_blank">Solution 2</a>
+            </li>
+            <li>
+              <a href="ex-1/solution-3.html" target="_blank">Solution 3</a>
+            </li>
+            <li><a href="ex-1/notes.html" target="_blank">Notes</a></li>
+          </ul>
         </div>
+
+        <div class="exercise-card">
+          <h2>Exercise 2</h2>
+          <ul>
+            <li>
+              <a href="ex-2/solution-1.html" target="_blank">Solution 1</a>
+            </li>
+            <li>
+              <a href="ex-2/solution-2.html" target="_blank">Solution 2</a>
+            </li>
+            <li>
+              <a href="ex-2/solution-3.html" target="_blank">Solution 3</a>
+            </li>
+            <li><a href="ex-2/notes.html" target="_blank">Notes</a></li>
+          </ul>
+        </div>
+
+        <div class="exercise-card">
+          <h2>Exercise 3</h2>
+          <ul>
+            <li>
+              <a href="ex-3/solution-1.html" target="_blank">Solution 1</a>
+            </li>
+            <li>
+              <a href="ex-3/solution-2.html" target="_blank">Solution 2</a>
+            </li>
+            <li>
+              <a href="ex-3/solution-3.html" target="_blank">Solution 3</a>
+            </li>
+            <li>
+              <a href="ex-3/solution-4.html" target="_blank">Solution 4</a>
+            </li>
+            <li><a href="ex-3/notes.html" target="_blank">Notes</a></li>
+          </ul>
+        </div>
+
+        <div class="exercise-card">
+          <h2>Exercise 4</h2>
+          <ul>
+            <li>
+              <a href="ex-4/solution-1.html" target="_blank">Solution 1</a>
+            </li>
+            <li>
+              <a href="ex-4/solution-2.html" target="_blank">Solution 2</a>
+            </li>
+            <li>
+              <a href="ex-4/solution-3.html" target="_blank">Solution 3</a>
+            </li>
+            <li><a href="ex-4/notes.html" target="_blank">Notes</a></li>
+          </ul>
+        </div>
+
+        <div class="exercise-card">
+          <h2>Exercise 5</h2>
+          <ul>
+            <li>
+              <a href="ex-5/solution-1.html" target="_blank">Solution 1</a>
+            </li>
+            <li>
+              <a href="ex-5/solution-2.html" target="_blank">Solution 2</a>
+            </li>
+            <li>
+              <a href="ex-5/solution-3.html" target="_blank">Solution 3</a>
+            </li>
+            <li><a href="ex-5/notes.html" target="_blank">Notes</a></li>
+          </ul>
+        </div>
+
+        <div class="exercise-card">
+          <h2>Exercise 6</h2>
+          <ul>
+            <li><a href="ex-6/solution.html" target="_blank">Solution</a></li>
+            <li><a href="ex-6/notes.html" target="_blank">Notes</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
