--- a/index.html
+++ b/index.html
@@ -1,299 +1,341 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bootcamp Yashwant</title>
     <link rel="icon" type="image/png" href="target.png" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
 
-        :root {
-            --primary-color: #000000;
-            --secondary-color: #ff006e;
-            --tertiary-color: #8338ec;
-            --background-color: #f0f0f0;
-            --card-background: rgba(255, 255, 255, 0.8);
+      :root {
+        --primary-color: #000000;
+        --secondary-color: #ff006e;
+        --tertiary-color: #8338ec;
+        --background-color: #f0f0f0;
+        --card-background: rgba(255, 255, 255, 0.8);
+      }
+
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      .main {
+        font-family: "Poppins", sans-serif;
+        background-color: var(--background-color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        overflow-x: hidden;
+      }
+
+      .container {
+        margin-top: 50px;
+        display: flex;
+        width: 70%;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 2rem;
+        padding: 2rem;
+      }
+
+      .card {
+        width: 180px;
+        height: 280px;
+        perspective: 1000px;
+        cursor: pointer;
+      }
+
+      .card-inner {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        transform-style: preserve-3d;
+        transition: transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
+      }
+
+      .card:hover .card-inner {
+        transform: rotateY(180deg);
+      }
+
+      .card-back p {
+        color: white;
+      }
+
+      .card-front,
+      .card-back {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        backface-visibility: hidden;
+        border-radius: 15px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+        padding: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        background-color: var(--card-background);
+        overflow: hidden;
+      }
+
+      .card-back {
+        transform: rotateY(180deg);
+        background-color: var(--primary-color);
+        color: white;
+      }
+
+      .card-back p {
+        font-size: 0.8rem;
+      }
+
+      .card::before {
+        animation: colorShift 10s ease-in-out infinite alternate;
+      }
+
+      @keyframes colorShift {
+        0% {
+          transform: rotate(0deg);
         }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+        100% {
+          transform: rotate(360deg);
         }
+      }
 
-        .main {
-            font-family: 'Poppins', sans-serif;
-            background-color: var(--background-color);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            overflow-x: hidden;
-        }
+      h2 {
+        font-size: 1.3rem;
+        margin-bottom: 1rem;
+        color: var(--primary-color);
+      }
 
+      p {
+        font-size: 1rem;
+        line-height: 1.6;
+        color: #333;
+      }
+
+      .icon {
+        font-size: 3rem;
+        margin-bottom: 1rem;
+        color: var(--secondary-color);
+      }
+
+      .btn {
+        margin-top: 1rem;
+        padding: 0.8rem 1.5rem;
+        background-color: var(--primary-color);
+        color: white;
+        border: none;
+        border-radius: 25px;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        text-decoration: none;
+        background-color: var(--secondary-color);
+      }
+
+      .btn:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      }
+
+      .git {
+        position: fixed;
+        top: 40px;
+        right: 40px;
+        cursor: pointer;
+      }
+
+      .git a {
+        text-decoration: none;
+        border-bottom: 5px solid black;
+        padding-bottom: 5px;
+        border-radius: 100%;
+      }
+
+      @media (max-width: 768px) {
         .container {
-            margin-top: 50px;
-            display: flex;
-            width: 70%;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-            gap: 2rem;
-            padding: 2rem;
+          flex-direction: column;
         }
-
-        .card {
-            width: 180px;
-            height: 280px;
-            perspective: 1000px;
-            cursor: pointer;
+        .container {
+          width: 100%;
         }
-
-        .card-inner {
-            width: 100%;
-            height: 100%;
-            position: relative;
-            transform-style: preserve-3d;
-            transition: transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
-        }
-
-        .card:hover .card-inner {
-            transform: rotateY(180deg);
-        }
-
-        .card-back p {
-            color: white;
-        }
-
-        .card-front, .card-back {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            backface-visibility: hidden;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            padding: 2rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            background-color: var(--card-background);
-            overflow: hidden;
-        }
-
-        .card-back {
-            transform: rotateY(180deg);
-            background-color: var(--primary-color);
-            color: white;
-        }
-
-        .card-back p{
-            font-size: 0.8rem;
-        }
-
-        .card::before {
-            animation: colorShift 10s ease-in-out infinite alternate;
-        }
-
-        @keyframes colorShift {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        h2 {
-            font-size: 1.3rem;
-            margin-bottom: 1rem;
-            color: var(--primary-color);
-        }
-
-        p {
-            font-size: 1rem;
-            line-height: 1.6;
-            color: #333;
-        }
-
-        .icon {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            color: var(--secondary-color);
-        }
-
-        .btn {
-            margin-top: 1rem;
-            padding: 0.8rem 1.5rem;
-            background-color: var(--primary-color);
-            color: white;
-            border: none;
-            border-radius: 25px;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            background-color: var(--secondary-color);
-        }
-
-        .btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        .git {
-            position: fixed;
-            top: 40px;
-            right: 40px;
-            cursor: pointer;
-        }
-
-        .git a{
-            text-decoration: none;
-            border-bottom: 5px solid black;
-            padding-bottom: 5px;
-            border-radius: 100%;
-        }
-
-
-
-        @media (max-width: 768px) {
-            .container {
-                flex-direction: column;
-            }
-            .container {
-                width: 100%;
-            }
-        }
+      }
     </style>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-</head>
-<body>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="main">
-        <nav class="git">
-            <a href="https://github.com/Y-A-S-H-W-A-N-T/Bootcamp-Yashwant" target="_blank"><i class="fa-brands fa-github fa-bounce fa-2xl"></i></a>
-        </nav>
-        <div class="container">
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <div class="icon"><i class="fab fa-html5 icon html-icon fa-bounce"></i></div>
-                        <h2>html-css</h2>
-                        Day - 1
-                    </div>
-                    <div class="card-back">
-                        <p>Day - 1</p>
-                        <p>Exercise with plain html and css</p>
-                        <a href="./html-css/index.html" target="_blank" class="btn">View</a>
-                    </div>
-                </div>
+      <nav class="git">
+        <a
+          href="https://github.com/Y-A-S-H-W-A-N-T/Bootcamp-Yashwant"
+          target="_blank"
+          ><i class="fa-brands fa-github fa-bounce fa-2xl"></i
+        ></a>
+      </nav>
+      <div class="container">
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <div class="icon">
+                <i class="fab fa-html5 icon html-icon fa-bounce"></i>
+              </div>
+              <h2>html-css</h2>
+              Day - 1
             </div>
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <div class="icon"><i class="fa-solid fa-pen-ruler fa-bounce" style="color: #B197FC;"></i></div>
-                        <h2>design</h2>
-                        Day - 2
-                    </div>
-                    <div class="card-back">
-                        <p>Day - 2</p>
-                        <p>Design elements.</p>
-                        <a href="./design/index.html" class="btn">View</a>
-                    </div>
-                </div>
+            <div class="card-back">
+              <p>Day - 1</p>
+              <p>Exercise with plain html and css</p>
+              <a href="./html-css/index.html" target="_blank" class="btn"
+                >View</a
+              >
             </div>
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <div class="icon"><i class="fa-solid fa-star-half-stroke fa-rotate-270 fa-bounce" style="color: #ff2ebd;"></i></div>
-                        <h2>design-review</h2>
-                        Day - 3
-                    </div>
-                    <div class="card-back">
-                        <p>Day - 3</p>
-                        <p>Review of the design</p>
-                        <p>Contains reviews of each person</p>
-                        <a href="./design-review/solution.html" class="btn">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <div class="icon"><i class="fa-solid fa-book fa-bounce" style="color: #81f15e;"></i></div>
-                        <h2>programming-basics</h2>
-                        Day - 4
-                    </div>
-                    <div class="card-back">
-                        <p>Day - 4</p>
-                        <p>Basic js&ts programming</p>
-                        <a href="./programming-basics/index.html" class="btn">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <div class="icon"><i class="fa-solid fa-code fa-bounce"></i></div>
-                        <h2>front-end-programming</h2>
-                        Day - 5
-                    </div>
-                    <div class="card-back">
-                        <p>Day - 5</p>
-                        <p>Bringing all the learn things together and introducing you to modern tools and best practices.</p>
-                        <a href="./front-end-programming/index.html" class="btn">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <div class="icon"><i class="fa-regular fa-file-code fa-bounce" style="color: #1DB954;"></i></div>
-                        <h2>Capstone Projects</h2>
-                        Day - 6
-                    </div>
-                    <div class="card-back">
-                        <p>Day - 6</p>
-                        <p>A small glance of what I learnt in this journey</p>
-                        <a href="./basic-capstone/index.html" class="btn">View</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <div class="icon"><i class="fa-brands fa-react fa-bounce" style="color: #FFD43B;"></i></div>
-                        <h2>Basic Review</h2>
-                        Day - 7
-                    </div>
-                    <div class="card-back">
-                        <p>Day - 7</p>
-                        <p>Basic Review and past projects upgraded using react</p>
-                        <a href="basic-review/index.html" class="btn">View</a>
-                    </div>
-                </div>
-            </div>            
+          </div>
         </div>
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <div class="icon">
+                <i
+                  class="fa-solid fa-pen-ruler fa-bounce"
+                  style="color: #b197fc"
+                ></i>
+              </div>
+              <h2>design</h2>
+              Day - 2
+            </div>
+            <div class="card-back">
+              <p>Day - 2</p>
+              <p>Design elements.</p>
+              <a href="./design/index.html" class="btn">View</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <div class="icon">
+                <i
+                  class="fa-solid fa-star-half-stroke fa-rotate-270 fa-bounce"
+                  style="color: #ff2ebd"
+                ></i>
+              </div>
+              <h2>design-review</h2>
+              Day - 3
+            </div>
+            <div class="card-back">
+              <p>Day - 3</p>
+              <p>Review of the design</p>
+              <p>Contains reviews of each person</p>
+              <a href="./design-review/solution.html" class="btn">View</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <div class="icon">
+                <i
+                  class="fa-solid fa-book fa-bounce"
+                  style="color: #81f15e"
+                ></i>
+              </div>
+              <h2>programming-basics</h2>
+              Day - 4
+            </div>
+            <div class="card-back">
+              <p>Day - 4</p>
+              <p>Basic js&ts programming</p>
+              <a href="./programming-basics/index.html" class="btn">View</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <div class="icon"><i class="fa-solid fa-code fa-bounce"></i></div>
+              <h2>front-end-programming</h2>
+              Day - 5
+            </div>
+            <div class="card-back">
+              <p>Day - 5</p>
+              <p>
+                Bringing all the learn things together and introducing you to
+                modern tools and best practices.
+              </p>
+              <a href="./front-end-programming/index.html" class="btn">View</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <div class="icon">
+                <i
+                  class="fa-regular fa-file-code fa-bounce"
+                  style="color: #1db954"
+                ></i>
+              </div>
+              <h2>Capstone Projects</h2>
+              Day - 6
+            </div>
+            <div class="card-back">
+              <p>Day - 6</p>
+              <p>A small glance of what I learnt in this journey</p>
+              <a href="./basic-capstone/index.html" class="btn">View</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <div class="icon">
+                <i
+                  class="fa-brands fa-react fa-bounce"
+                  style="color: #ffd43b"
+                ></i>
+              </div>
+              <h2>Basic Review</h2>
+              Day - 7
+            </div>
+            <div class="card-back">
+              <p>Day - 7</p>
+              <p>Basic Review and past projects upgraded using react</p>
+              <a href="basic-review/index.html" class="btn">View</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script>
-        document.querySelectorAll('.card').forEach(card => {
-            card.addEventListener('mousemove', (e) => {
-                const rect = card.getBoundingClientRect();
-                const x = e.clientX - rect.left;
-                const y = e.clientY - rect.top;
+      document.querySelectorAll(".card").forEach((card) => {
+        card.addEventListener("mousemove", (e) => {
+          const rect = card.getBoundingClientRect();
+          const x = e.clientX - rect.left;
+          const y = e.clientY - rect.top;
 
-                const centerX = rect.width / 2;
-                const centerY = rect.height / 2;
+          const centerX = rect.width / 2;
+          const centerY = rect.height / 2;
 
-                const rotateX = (y - centerY) / 10;
-                const rotateY = (centerX - x) / 10;
+          const rotateX = (y - centerY) / 10;
+          const rotateY = (centerX - x) / 10;
 
-                card.style.transform = `perspective(1000px) rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
-            });
-
-            card.addEventListener('mouseleave', () => {
-                card.style.transform = 'perspective(1000px) rotateX(0) rotateY(0)';
-            });
+          card.style.transform = `perspective(1000px) rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
         });
+
+        card.addEventListener("mouseleave", () => {
+          card.style.transform = "perspective(1000px) rotateX(0) rotateY(0)";
+        });
+      });
     </script>
-</body>
+  </body>
 </html>
